// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyView should display an empty topology correctly 1`] = `
<TopologyView
  className="my-test-class"
  id="simple-test-id"
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-0"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-0"
              >
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <Drawer
            isExpanded={false}
            isInline={true}
          >
            <div
              className="pf-c-drawer pf-m-inline"
            >
              <DrawerContent
                panelContent={
                  <DrawerPanelContent
                    defaultSize="500px"
                    id="topology-resize-panel"
                    isResizable={false}
                    maxSize="100%"
                    minSize="150px"
                  />
                }
              >
                <DrawerMain>
                  <div
                    className="pf-c-drawer__main"
                  >
                    <div
                      className="pf-c-drawer__content"
                    >
                      <DrawerContentBody>
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-topology-content"
                          />
                        </div>
                      </DrawerContentBody>
                    </div>
                    <DrawerPanelContent
                      defaultSize="500px"
                      id="topology-resize-panel"
                      isResizable={false}
                      maxSize="100%"
                      minSize="150px"
                    >
                      <div
                        className="pf-c-drawer__panel"
                        hidden={true}
                        id="topology-resize-panel"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "--pf-c-drawer__panel--md--FlexBasis": "500px",
                            "--pf-c-drawer__panel--md--FlexBasis--max": "100%",
                            "--pf-c-drawer__panel--md--FlexBasis--min": "150px",
                          }
                        }
                      />
                    </DrawerPanelContent>
                  </div>
                </DrawerMain>
              </DrawerContent>
            </div>
          </Drawer>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;

exports[`TopologyView should display topology correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-1"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-1"
              >
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-1-expandable-content-0"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-1-expandable-content-0"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-1-expandable-content-0"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-1-expandable-content-1"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-1-expandable-content-1"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-1-expandable-content-1"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <Drawer
            isExpanded={false}
            isInline={true}
          >
            <div
              className="pf-c-drawer pf-m-inline"
            >
              <DrawerContent
                panelContent={
                  <DrawerPanelContent
                    defaultSize="500px"
                    id="topology-resize-panel"
                    isResizable={false}
                    maxSize="100%"
                    minSize="150px"
                  />
                }
              >
                <DrawerMain>
                  <div
                    className="pf-c-drawer__main"
                  >
                    <div
                      className="pf-c-drawer__content"
                    >
                      <DrawerContentBody>
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-topology-content"
                          >
                            <div
                              id="test-canvas"
                            />
                            <span
                              className="pf-topology-control-bar"
                            >
                              <div
                                id="test-control-bar"
                              />
                            </span>
                          </div>
                        </div>
                      </DrawerContentBody>
                    </div>
                    <DrawerPanelContent
                      defaultSize="500px"
                      id="topology-resize-panel"
                      isResizable={false}
                      maxSize="100%"
                      minSize="150px"
                    >
                      <div
                        className="pf-c-drawer__panel"
                        hidden={true}
                        id="topology-resize-panel"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "--pf-c-drawer__panel--md--FlexBasis": "500px",
                            "--pf-c-drawer__panel--md--FlexBasis--max": "100%",
                            "--pf-c-drawer__panel--md--FlexBasis--min": "150px",
                          }
                        }
                      />
                    </DrawerPanelContent>
                  </div>
                </DrawerMain>
              </DrawerContent>
            </div>
          </Drawer>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;

exports[`TopologyView should display topology sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={false}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-2"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-2"
              >
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-2-expandable-content-2"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-2-expandable-content-2"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-2-expandable-content-2"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-2-expandable-content-3"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-2-expandable-content-3"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-2-expandable-content-3"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <Drawer
            isExpanded={false}
            isInline={true}
          >
            <div
              className="pf-c-drawer pf-m-inline"
            >
              <DrawerContent
                panelContent={
                  <DrawerPanelContent
                    defaultSize="500px"
                    id="topology-resize-panel"
                    isResizable={false}
                    maxSize="100%"
                    minSize="150px"
                  >
                    <div>
                      Test SideBar
                    </div>
                  </DrawerPanelContent>
                }
              >
                <DrawerMain>
                  <div
                    className="pf-c-drawer__main"
                  >
                    <div
                      className="pf-c-drawer__content"
                    >
                      <DrawerContentBody>
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-topology-content"
                          >
                            <div
                              id="test-canvas"
                            />
                            <span
                              className="pf-topology-control-bar"
                            >
                              <div
                                id="test-control-bar"
                              />
                            </span>
                          </div>
                        </div>
                      </DrawerContentBody>
                    </div>
                    <DrawerPanelContent
                      defaultSize="500px"
                      id="topology-resize-panel"
                      isResizable={false}
                      maxSize="100%"
                      minSize="150px"
                    >
                      <div
                        className="pf-c-drawer__panel"
                        hidden={true}
                        id="topology-resize-panel"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "--pf-c-drawer__panel--md--FlexBasis": "500px",
                            "--pf-c-drawer__panel--md--FlexBasis--max": "100%",
                            "--pf-c-drawer__panel--md--FlexBasis--min": "150px",
                          }
                        }
                      >
                        <div>
                          Test SideBar
                        </div>
                      </div>
                    </DrawerPanelContent>
                  </div>
                </DrawerMain>
              </DrawerContent>
            </div>
          </Drawer>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;

exports[`TopologyView should display topology w/ open sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={true}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <GenerateId
            prefix="pf-topology-view-"
          >
            <Toolbar
              id="pf-topology-view-3"
            >
              <div
                className="pf-c-toolbar"
                id="pf-topology-view-3"
              >
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="project-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="project-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group project-toolbar"
                          >
                            <div
                              id="test-context-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-3-expandable-content-4"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-3-expandable-content-4"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-3-expandable-content-4"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <ToolbarContent
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content"
                  >
                    <div
                      className="pf-c-toolbar__content-section"
                    >
                      <ForwardRef
                        className="view-toolbar"
                      >
                        <ToolbarGroupWithRef
                          className="view-toolbar"
                          innerRef={null}
                        >
                          <div
                            className="pf-c-toolbar__group view-toolbar"
                          >
                            <div
                              id="test-view-bar"
                            />
                          </div>
                        </ToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                    <ToolbarExpandableContent
                      chipContainerRef={
                        Object {
                          "current": null,
                        }
                      }
                      clearFiltersButtonText="Clear all filters"
                      expandableContentRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__expandable-content"
                            id="pf-topology-view-3-expandable-content-5"
                          >
                            <div
                              class="pf-c-toolbar__group"
                            />
                          </div>,
                        }
                      }
                      id="pf-topology-view-3-expandable-content-5"
                      isExpanded={false}
                      showClearFiltersButton={false}
                    >
                      <div
                        className="pf-c-toolbar__expandable-content"
                        id="pf-topology-view-3-expandable-content-5"
                      >
                        <ForwardRef>
                          <ToolbarGroupWithRef
                            innerRef={null}
                          >
                            <div
                              className="pf-c-toolbar__group"
                            />
                          </ToolbarGroupWithRef>
                        </ForwardRef>
                      </div>
                    </ToolbarExpandableContent>
                  </div>
                </ToolbarContent>
                <Divider>
                  <hr
                    className="pf-c-divider"
                  />
                </Divider>
                <ToolbarChipGroupContent
                  chipGroupContentRef={
                    Object {
                      "current": <div
                        class="pf-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-c-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  collapseListedFiltersBreakpoint="lg"
                  isExpanded={false}
                  numberOfFilters={0}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-toolbar__content pf-m-hidden"
                    hidden={true}
                  >
                    <ForwardRef
                      className=""
                    >
                      <ToolbarGroupWithRef
                        className=""
                        innerRef={null}
                      >
                        <div
                          className="pf-c-toolbar__group"
                        />
                      </ToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </ToolbarChipGroupContent>
              </div>
            </Toolbar>
          </GenerateId>
        </div>
      </StackItem>
      <StackItem
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <Drawer
            isExpanded={true}
            isInline={true}
          >
            <div
              className="pf-c-drawer pf-m-expanded pf-m-inline"
            >
              <DrawerContent
                panelContent={
                  <DrawerPanelContent
                    defaultSize="500px"
                    id="topology-resize-panel"
                    isResizable={false}
                    maxSize="100%"
                    minSize="150px"
                  >
                    <div>
                      Test SideBar
                    </div>
                  </DrawerPanelContent>
                }
              >
                <DrawerMain>
                  <div
                    className="pf-c-drawer__main"
                  >
                    <div
                      className="pf-c-drawer__content"
                    >
                      <DrawerContentBody>
                        <div
                          className="pf-c-drawer__body"
                        >
                          <div
                            className="pf-topology-content"
                          >
                            <div
                              id="test-canvas"
                            />
                            <span
                              className="pf-topology-control-bar"
                            >
                              <div
                                id="test-control-bar"
                              />
                            </span>
                          </div>
                        </div>
                      </DrawerContentBody>
                    </div>
                    <DrawerPanelContent
                      defaultSize="500px"
                      id="topology-resize-panel"
                      isResizable={false}
                      maxSize="100%"
                      minSize="150px"
                    >
                      <div
                        className="pf-c-drawer__panel"
                        hidden={false}
                        id="topology-resize-panel"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "--pf-c-drawer__panel--md--FlexBasis": "500px",
                            "--pf-c-drawer__panel--md--FlexBasis--max": "100%",
                            "--pf-c-drawer__panel--md--FlexBasis--min": "150px",
                          }
                        }
                      >
                        <div>
                          Test SideBar
                        </div>
                      </div>
                    </DrawerPanelContent>
                  </div>
                </DrawerMain>
              </DrawerContent>
            </div>
          </Drawer>
        </div>
      </StackItem>
    </div>
  </Stack>
</TopologyView>
`;
